# folding_cloth

./: CMakeLists.txt  build.sh  clear.sh  hello.pro  main.cpp  svg_converter.cpp
src/: CMakeLists.txt  main.cpp  svg_converter.cpp
src/libs/nanosvg/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
src/libs/sqrt/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
